# GeoMACH

./: .gitignore  MANIFEST.in  Makefile  README.txt  setup.cfg  setup.py
GeoMACH/BSE/: BSEmodel.py  BSEvec.py  __init__.py  test.py
GeoMACH/PAM/: __init__.py
GeoMACH/PGM/: __init__.py
GeoMACH/PSM/: BDFwriter.py  QUAD.py  __init__.py  airframe.py
GeoMACH/PUBS/: PUBS.py  PUBSexport.py  README  __init__.py
PAM/: Makefile  configuration.py  setup.py  wingbody.py
PAM/components/: component.py  fulljunction.py  fullplate.py
PUBS/: Makefile  setup.py
PUBS/PUBS/: PUBS.py  PUBSexport.py  __init__.py  export2EGADS.py
PUBS/docs/: Makefile  example1.rst  make.bat
PUBS/examples/: test_cube.py  test_dlrf6.py  test_sphere.py
PUBS/test/: test_PUBS.py
bspline2d/: setup.py
bspline2d/bspline2d/: bspline2d.py  export2EGADS.py
bspline2d/examples/: test_cube.py  test_dlrf6.py  test_sphere.py
docs/: conf.py  index.rst  pkgdocs.rst  srcdocs.rst  usage.rst
docs/_static/: .gitignore
docs/src/: Conventional.rst  GeoMACH.BSE.rst  GeoMACH.PGM.components.rst  GeoMACH.PGM.core.rst  GeoMACH.PGM.rst  GeoMACH.PSM.rst  GeoMACH.rst  Makefile  Tutorials.rst  conf.py  index.rst  make.bat
examples/: RC_aircraft_tutorial.py  conventional.py  supersonic.py  trussbraced_full.py  trussbraced_wingstrut.py  wing.py
python/: export2EGADS.py  export2EGADS.py~  oml.py  oml.py~
python/examples/: test_cube.py  test_dlrf6.py  test_sphere.py  write4EGADS.py  write4EGADS.py~
python/old/: manifold2d.py  manifold2d.py~  wrapper.py
src/BSE/: bspline_basis.f90  bspline_param.f90  (+9 more)
(+278 files in other folders)
