[metadata]
name = GeoMACH
version = 0.1
summary = 
description-file = 
keywords = geometry
home-page = https://github.com/hwangjt/GeoMACH
download-url = 
author = John Hwang
author-email = hwangjt@umich.edu
maintainer = John Hwang
maintainer-email = hwangjt@umich.edu
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = 
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

