[metadata]
name = GeoMACH
version = 0.1
summary = Geometry-centric MDAO of Aircraft Configurations with High fidelity - is an aircraft design tool suite featuring parametric modelers for the geometry and structure of the aircraft that are efficient and supply derivatives with respect to all parameters, enabling optimization with large numbers of design variables.
description-file = 
keywords = geometry
home-page = https://github.com/hwangjt/GeoMACH
download-url = 
author = John Hwang
author-email = hwangjt@umich.edu
maintainer = John Hwang
maintainer-email = hwangjt@umich.edu
license = LGPL
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = 
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]
